<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="apps_header">My Nanodegree Apps!</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="launch_spotify_streamer">Launching the Spotify Streamer app!</string>
    <string name="launch_scores_app">Launching the Football Scores app!</string>
    <string name="launch_library_app">Launching the Library app!</string>
    <string name="launch_build_it_bigger">Launching the Build It Bigger app!</string>
    <string name="launch_xyz_reader">Launching the XYZ Reader app!</string>
    <string name="launch_capstone">Launching the Capstone app!</string>
</resources>
